--- a/template/payment.html
+++ b/template/payment.html
@@ -30,3 +30,11 @@
     }
     </script>
     </body>
+
+    <div class="col-lg-12">
+        <form method="POST">
+            {% csrf_token  %}
+            {{  form.as_p  }}
+            <input type="submit" class="btn" value="Pay">
+        </form>
+    </div>
